# Performance-Comparison-Non-Comparison-Sorting-Algorithms

./: .gitignore  analyze_phase3.py  cpu_bench.slurm  environment.yml  environment_exact.yml  generate_datasets.slurm  gpu_bench.slurm  phase3.md  phase3_gpu_results.csv  phase3_gpu_resultsV4.csv
data_generation/: README.md  config.json  generate_datasets.py  generate_datasets.slurm
datasets_signed/: all_equal_n100000000_min-500000_max499999_dtypeint64_seed42_val0.json  all_equal_n10000000_min-500000_max499999_dtypeint64_seed42_val0.json  all_equal_n1000000_min-500000_max499999_dtypeint64_seed42_val0.json  all_equal_n100000_min-500000_max499999_dtypeint64_seed42_val0.json  all_equal_n10000_min-500000_max499999_dtypeint64_seed42_val0.json  all_equal_n1000_min-500000_max499999_dtypeint64_seed42_val0.json  all_equal_n100_min-500000_max499999_dtypeint64_seed42_val0.json  exponential_n100000000_min-2147483648_max2147483647_dtypeint64_seed42_lam1.0.json  exponential_n10000000_min-2147483648_max2147483647_dtypeint64_seed42_lam1.0.json  exponential_n1000000_min-2147483648_max2147483647_dtypeint64_seed42_lam1.0.json  (+53 more)
logs/: cpu_bench_45096.err  (+33 more)
sorting-benchmark/: CMakeLists.txt
sorting-benchmark/cuda/: bitonic_sort_gpu.cu  bitonic_sort_gpu.cuh  bucket_sort_gpu.cu  bucket_sort_gpu.cuh  bucket_sort_radix_gpu.cu  bucket_sort_radix_gpu.cuh  gpu_sort_common.cu  main_gpu_bench.cu  radix_sort.cu  radix_sort.cuh
sorting-benchmark/include/: gpu_sort_common.hpp  sort_algorithms.hpp  sort_common.hpp
sorting-benchmark/src/: main_cpu_bench.cpp  sort_algorithms.cpp  sort_common.cpp
(+65 files in other folders)
